issue #401: cert PoC 結果を doc に追記 (sun.security.x509 で CA+SAN leaf 生成、curl で SNI 検証成功)